fix z-index for keyboard btn
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@56181 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/keyboard-web/src/main/resources/org/geogebra/keyboard/css/keyboard-styles.scss
+++ b/keyboard-web/src/main/resources/org/geogebra/keyboard/css/keyboard-styles.scss
@@ -44,6 +44,7 @@ $purple-default: #6557D2;
     	height: 22px;
     	cursor: pointer;
     	text-align: center;
+    	z-index: 99;
     	
     	img {
     		width: 36px;
